--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -9,7 +9,8 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: #000;
+  background-color: #0a0a0a;
+  /*#d6d6d6;*/
   color: #fff;
 }
 
@@ -23,6 +24,10 @@ header {
 
 h1, h2, h3 {
   color: #fff;
+}
+
+label {
+  color: #000;
 }
 
 button {
@@ -60,4 +65,51 @@ button:hover {
   border-radius: 5px;
   margin-bottom: 20px;
 }
+
+.spectacle-form {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 30px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 95%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-group textarea {
+  resize: vertical;
+  min-height: 100px;
+}
+
+.submit-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
 
