--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -112,4 +112,60 @@ button:hover {
   background-color: #0056b3;
 }
 
+label {
+  color: white;
+} 
 
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+}
+
+.form-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.modal {
+  position: absolute;
+  width: 50%;
+  min-width: '350px';
+  height: 30%;
+  min-height: '700px';
+  background: grey;
+  color: white;
+  border-radius: 16px;
+}
+
+.modal-container {
+  padding: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-info {
+  gap: 4px;
+}
+
+.modal-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.purchase-shower {
+  display: grid;
+  grid-template-columns: 5rem 1fr;
+  align-items: center;
+}
