--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -135,6 +135,9 @@ label {
 
 .modal {
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 50%;
   min-width: '350px';
   height: 30%;
@@ -142,6 +145,17 @@ label {
   background: grey;
   color: white;
   border-radius: 16px;
+  z-index: 2;
+}
+
+.modal-back-shadow {
+  z-index: 0;
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .modal-container {
